style landing page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
     >
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
+    <div class="background-image"></div>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
